--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 body{
-   
-    font-family: verdana;
+    font-size: 16px;
+    font-family: "Kumbh Sans";
 }
 nav{
     background-color: white;
-  display: flex;
-  justify-content: space-between;
+  
 }
 .frrr{
     display: flex;
@@ -26,6 +25,10 @@ nav a{
     align-items: center;
     color: black;
 
+}
+nav a:hover{
+    border-bottom:3px solid #ff7d1a;
+    transition: 0.3s;
 }
 .img {
     align-items: center;
@@ -58,23 +61,40 @@ nav a{
 .sidebar a{
     width: 100%;
     padding: 0 10px;
+    font-weight: bolder;
+}
+.close.btn{
+   margin-right: 180px;
 }
 .product-info {
   padding: 20px;
+}
+.product-preview {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-color: #eee;
+}
+.product-preview img{
+    width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .brand {
   text-transform: uppercase;
   letter-spacing: 2px;
-  font-size: 12px;
-  color: #ff7d1a;
+  font-weight: 600;
+  font-size: 14px;
+  color: grey;
   margin-bottom: 10px;
 }
 .product-info h1{
-    font-size: 22px;
+    font-size: 60px;
     margin-bottom: 15px;
     color: #333;
 }
+
 .description{
     font-size: 16px;
     color: #777;
@@ -140,7 +160,12 @@ nav a{
 }
 .add-to-cart{
     background-color: #ff7d1a;
-    color: white;
+    color: black;
+    font-family: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
     font-size: 16px;
     font-weight: bold;
     padding: 12px;
@@ -172,7 +197,8 @@ nav a{
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    width:310px;
+   
     padding: 20px;
     display: none;
     flex-direction: column;
@@ -180,15 +206,17 @@ nav a{
 }
 .cart-dropdown h4{
     margin-bottom: 15px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid black;
 }
 .cart-item{
     display: flex;
     align-items: center;
     margin-bottom: 15px;
 }
-.cart-item img{
+.cart-item .img{
     width: 50px;
-    border-radius: 80px;
+    border-radius: 10px;
     margin-right: 10px;
 
 }
@@ -202,7 +230,7 @@ nav a{
 }
 .checkout-btn{
     background: #ff7d1a;
-    color: white;
+    color: black;
     padding:12px;
     border: none;
     border-radius: 10px;
@@ -211,6 +239,97 @@ nav a{
     margin-top: 10px;
 
 }
+.para{
+    text-align: center;
+}
+/*lightbox*/
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.85);
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+
+.lightbox-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+  max-width: 600px;
+}
+
+.lightbox-wrapper img {
+  width: 100%;
+  max-height: 60vh;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+
+.lightbox-thumbnails {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.lightbox-thumbnails img {
+  width: 60px;
+  height: 60px;
+  border-radius: 8px;
+  cursor: pointer;
+  opacity: 0.7;
+  object-fit: cover;
+}
+
+.lightbox-thumbnails img:hover {
+  opacity: 1;
+  border: 2px solid white;
+}
+
+
+.nav {
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  margin: 0 20px;
+}
+
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 2em;
+  color: white;
+  cursor: pointer;
+  z-index: 1100;
+}
+.delete{
+    width: 100%;
+    height: auto;
+    
+}
+
+.add-to-cart:hover{
+    background-color: hsl(25, 100%, 94%);
+
+}
+
 @media (max-width: 800px) {
     .hideOnMobile{
         display: none;
@@ -223,6 +342,48 @@ nav a{
     font-size: 16px;
   }
 }
+@media (min-width: 1024px){
+    body{
+        padding-left: 70px;
+        padding-right: 70px;
+    }
+    .hamburger{
+        display: none;
+    }
+    nav{
+        border-bottom: 1px solid black;
+        padding-bottom: 10px;
+    }
+    .product{
+        display: flex;
+    }
+.product-preview {
+    padding: 50px;
+  position: relative;
+  width: 100%;
+  height: 500px;
+ background-color: white;
+}
+.product-preview img {
+    border-radius: 30px;
+}
+.price-box{
+    display: block;
+    line-height: 2;
+}
+.quantity-cart{
+    display: flex;
+    flex-direction: row;
+}
+.add-to-cart{
+    width: 250px;
+}
+.add-to-cart:hover{
+    background-color: hsl(25, 100%, 94%);
+
+}
+}
+
 
 
 
